# wasmrun

./: README.md
docs/: SETUP.md
docs/functions/: Audio-Generation.md  Create-mandelbrot-bitmap.md  Decrypt-Message.md  Encrypt-Message.md  Fibonacci.md  Fuzzy-Search.md  Get-Prime-Numbers.md  Hello-World.md  Image-Resize.md  Language-Detection.md  Planet-System-Simulation.md  Template.md
functions/: Cargo.toml
functions/src/audio-generation/native/: Cargo.toml  Dockerfile
functions/src/audio-generation/native/src/: handler.rs
functions/src/audio-generation/wasm/: Cargo.toml  Dockerfile  Dockerfile.aot
functions/src/audio-generation/wasm/src/: handler.rs
functions/src/create-mandelbrot-bitmap/native/: Cargo.toml  Dockerfile
functions/src/create-mandelbrot-bitmap/native/src/: handler.rs
functions/src/create-mandelbrot-bitmap/wasm/: Cargo.toml  Dockerfile  Dockerfile.aot
functions/src/create-mandelbrot-bitmap/wasm/src/: handler.rs
functions/src/decrypt-message/native/: Cargo.toml  Dockerfile
functions/src/decrypt-message/native/src/: handler.rs
functions/src/decrypt-message/wasm/: Cargo.toml  Dockerfile  Dockerfile.aot
functions/src/decrypt-message/wasm/src/: handler.rs
functions/src/encrypt-message/native/: Cargo.toml  Dockerfile
functions/src/encrypt-message/native/src/: handler.rs
functions/src/encrypt-message/wasm/: Cargo.toml  Dockerfile  Dockerfile.aot
functions/src/encrypt-message/wasm/src/: handler.rs
functions/src/fibonacci/native/: Cargo.toml  Dockerfile
functions/src/fibonacci/native/src/: handler.rs
functions/src/fibonacci/wasm/: Cargo.toml  Dockerfile  Dockerfile.aot
functions/src/fibonacci/wasm/src/: handler.rs
functions/src/fuzzy-search/native/: Cargo.toml  Dockerfile
functions/src/fuzzy-search/native/src/: handler.rs  main.rs
functions/src/fuzzy-search/wasm/: Cargo.toml  Dockerfile  Dockerfile.aot
functions/src/fuzzy-search/wasm/src/: handler.rs
functions/src/get-prime-numbers/native/: Cargo.toml  Dockerfile
functions/src/get-prime-numbers/native/src/: handler.rs
functions/src/get-prime-numbers/wasm/: Cargo.toml  Dockerfile  Dockerfile.aot
functions/src/get-prime-numbers/wasm/src/: handler.rs
functions/src/hello-world/native/: Cargo.toml  Dockerfile
functions/src/hello-world/native/src/: main.rs
functions/src/hello-world/wasm/: Cargo.toml  Dockerfile  Dockerfile.aot
functions/src/hello-world/wasm/src/: main.rs
functions/src/image-resize/native/: Cargo.toml  Dockerfile
functions/src/image-resize/native/src/: handler.rs
functions/src/image-resize/wasm/: Cargo.toml  Dockerfile  Dockerfile.aot
functions/src/image-resize/wasm/src/: handler.rs
functions/src/language-detection/native/: Cargo.toml  Dockerfile
functions/src/language-detection/native/src/: handler.rs
functions/src/language-detection/wasm/: Cargo.toml  Dockerfile  Dockerfile.aot
functions/src/language-detection/wasm/src/: handler.rs
functions/src/planet-system-simulation/native/: Cargo.toml  Dockerfile
functions/src/planet-system-simulation/native/src/: handler.rs
functions/src/planet-system-simulation/wasm/: Cargo.toml  Dockerfile
functions/src/planet-system-simulation/wasm/src/: handler.rs  main.rs
functions/src/shared_lib/: Cargo.toml
functions/src/shared_lib/src/: lib.rs  server.rs  storage_utils.rs
functions/src/template/native/: Cargo.toml  Dockerfile
functions/src/template/wasm/: Cargo.toml  Dockerfile
functions/src/template/wasm/src/: handler.rs
functions/src/token-auth/native/: Cargo.toml  Dockerfile
functions/src/token-auth/native/src/: handler.rs
functions/src/token-auth/wasm/: Cargo.toml  Dockerfile
functions/src/token-auth/wasm/src/: handler.rs
functions/src/zip-compression/native/: Cargo.toml  Dockerfile
functions/src/zip-compression/native/src/: handler.rs
functions/src/zip-compression/wasm/: Cargo.toml  Dockerfile
functions/src/zip-compression/wasm/src/: handler.rs
measurement_data/: cpu_usage_normalized.py  cpu_usage_summary.py  execution_time_payloads.json  filter_resource_usage_data.py  mem_usage_normalized.py  mem_usage_summary.py  print_throughput.py  print_throughput_foramtted.py  vis_execution_time_cpu_linechart.py  vis_execution_time_linechart.py  vis_execution_time_memory_linechart.py  vis_latency_linechart.py  vis_scaleability_cpu_linechart.py  vis_scaleability_memory_linechart.py  vis_throughput_linechart.py
resources/: test.txt
resources/files/: encrypted_text_1024kb.txt  encrypted_text_1kb.txt  encrypted_text_2048kb.txt  encrypted_text_50kb.txt  encrypted_text_512kb.txt  search_text_1kb.txt  search_text_2048kb.txt  search_text_512kb.txt  spanish_text_1024kb.txt  spanish_text_1kb.txt  spanish_text_2048kb.txt  spanish_text_50kb.txt  spanish_text_512kb.txt
testing/: build_test.sh  deploy_test.sh
testing/redis-storage/test-redis-native/: Cargo.toml  Dockerfile
testing/redis-storage/test-redis-native/src/: handler.rs
testing/redis-storage/test-redis-wasm/: Cargo.toml  Dockerfile
testing/redis-storage/test-redis-wasm/src/: handler.rs
util/: build.sh  config-deployment.yaml  config.sh  deploy.sh  measure_execution_time.sh  measure_scaleability.sh  service-native-cold.yaml.template  service-native.yaml.template  service-wasm-cold.yaml.template  service-wasm.yaml.template
(+474 files in other folders)
