[workspace]
members = [
    #"src/shared_lib/Cargo.toml",
    #"src/hello-world/native",
    #"src/hello-world/wasm",
    #"src/fibonacci/native",
    #"src/fibonacci/wasm",
    #"src/audio-generation/native",
    "src/audio-generation/wasm",
    #"src/image-resize/native",
    #"src/image-resize/wasm",
    #"src/fuzzy-search/native",
    #"src/fuzzy-search/wasm",
    #"src/get-prime-numbers/native",
    #"src/get-prime-numbers/wasm",
    #"src/language-detection/native",
    #"src/language-detection/wasm",
    #"src/zip-compression/native",
    #"src/zip-compression/wasm",
    #"src/planet-system-simulation/native",
    #"src/planet-system-simulation/wasm",
    #"src/video-processing/native",
    #"src/video-processing/wasm",
    #"src/image-recognition/native",
    #"src/image-recognition/wasm",
    #"src/minimum-spanning-tree/native",
    #"src/minimum-spanning-tree/wasm",
    #"src/breadth-first-search/native",
    #"src/breadth-first-search/wasm",
    #"src/web-shop-currency-conversion/native",
    #"src/web-shop-currency-conversion/wasm",
    #"src/token-auth/native",
    #"src/token-auth/wasm",
    #"src/decrypt-message/native",
    #"src/decrypt-message/wasm",
    #"src/encrypt-message/native",
    #"src/encrypt-message/wasm",
    #"src/create-mandelbrot-bitmap/native",
    #"src/create-mandelbrot-bitmap/wasm",
]

exclude = [
    "src/test",
    "src/template"
]