[package]
name = "shared_lib"
version = "0.1.0"
edition = "2018"


[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = "0.4"

redis = { version = "0.27.6", features = ["tokio-comp"], optional=true}
#hyper = { version = "0.14", features = ["full"], optional=true}
#tokio = { version = "1", features = ["rt", "macros", "net", "time", "io-util"], optional=true}

redis_wasi = { version = "0.22.3", default-features = false, features = ["tokio-comp"], optional = true}
#hyper_wasi = { version = "0.15.2", features = ["full"], optional=true}
#tokio_wasi = { version = "1.25.2", features = ["rt", "macros", "net", "time", "io-util"], optional=true}

#aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
#aws-sdk-s3 = "1.49.0"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"] # Compile as a Rust static library

[features]
default = []
native = ["redis"] #, "hyper", "tokio"
wasm = ["redis_wasi"] #, "hyper_wasi", "tokio_wasi"
