[package]
name = "test-redis-native"
version = "0.1.0"
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"]}
tokio = { version = "1", features = ["rt", "macros", "net", "time", "io-util"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"

redis = { version = "0.27.6", features = ["tokio-comp"] }