[package]
name = "test-redis-wasm"
version = "0.1.0"
edition = "2018"

[dependencies]
hyper_wasi = { version = "0.15.2", features = ["full"] }
tokio_wasi = { version = "1.25.2", features = [
    "rt",
    "macros",
    "net",
    "time",
    "io-util",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"

redis_wasi = { version = "0.22.3", default-features = false, features = ["tokio-comp",] }
