[package]
name = "create-mandelbrot-bitmap-native"
version = "0.1.0"
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"]}
tokio = { version = "1", features = ["rt", "macros", "net", "time", "io-util"]}
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rayon = "1.10.0"

shared_lib = { path = "shared_lib", features=["native"] }