[package]
name = "encrypt-message-native"
version = "0.1.0"
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"]}
tokio = { version = "1", features = ["rt", "macros", "net", "time", "io-util"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
aes-gcm = "0.10.3"
base64 = "0.22.1"

shared_lib = { path = "shared_lib", features=["native"] }