[package]
name = "zip-compression-native"
version = "0.1.0"
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"]}
tokio = { version = "1", features = ["rt", "macros", "net", "time", "io-util"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

shared_lib = { path = "shared_lib", features=["native"] }

walkdir = { version = "2" }
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }